--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/mongodb-acceptance-tests"]
-	path = src/mongodb-acceptance-tests
+[submodule "src/github.com/orange-cloudfoundry/mongodb-acceptance-tests"]
+	path = src/github.com/orange-cloudfoundry/mongodb-acceptance-tests
 	url = https://github.com/orange-cloudfoundry/mongodb-acceptance-tests.git
